# multi-agent-ai-research-system

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
data/: chatbot.db  chatbot.db-shm  chatbot.db-wal
data/chroma_database/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
notebooks/: chatbot.ipynb
notebooks/data/chroma_database/: chroma.sqlite3
src/api/: __init__.py
src/chatbot/: __init__.py  api.py  cli.py  config.py  graph.py  state.py
src/chatbot/tools/: __init__.py  math.py  rag.py  scheduler.py  search.py
src/core/: __init__.py  config.py
src/database/: __init__.py  session.py
src/embeddings/: __init__.py
src/ingestion/: __init__.py
src/retrieval/: __init__.py
src/services/: __init__.py  rag_service.py
src/vectorstore/: __init__.py  chroma.py
src/workers/: __init__.py
tests/: conftest.py  test_config.py  test_graph.py  test_tools.py
