[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot"
version = "1.0.0"
description = "A production-grade, multi-tool LangGraph AI Assistant Platform with a gorgeous React frontend, RAG, and Human-in-the-Loop approval systems."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kevin", email = "kevin@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langgraph>=0.1.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "chromadb>=0.5.0",
    "pypdf>=4.0.0",
    "langchain-google-genai>=1.0.0",
    "duckduckgo-search>=6.0.0",
    "langchain-mistralai>=0.1.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0.0",
    "requests>=2.31.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "ddgs>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
